<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_notifications"
        android:key="pref_key_storage_settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notifications_style"
            android:title="@string/pref_title_use_default_notification_style" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_color"
            android:title="@string/pref_title_colored_notification"
            android:summary="@string/pref_description_colored_notification"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_design"
        android:key="pref_key_design">

        <SwitchPreference
            android:defaultValue="false"
            android:key="circle_style"
            android:title="@string/pref_title_use_circle_theme" />

    </PreferenceCategory>
</PreferenceScreen>